--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 /*  your css code here. If applicable */
+  :root {
+      background-color: rgb(135, 206, 235);
+    }
+
+    /* Styling the paragraphs */
+    article p:first-child {
+      color: white;
+      background-color: black;
+      padding: 10px;
+    }
+
+    article p:nth-child(2) {
+      color: inherit;
+      padding: 10px;
+    }
+
+    article p:last-child {
+      color: red;
+      padding: 10px;
+    }
+
+    /* Styling the unordered list */
+    ul {
+      list-style: none;
+      padding: 0;
+      width: 50%;
+      margin: 20px auto;
+    }
+
+    ul li {
+      background-color: gray;
+      padding: 10px;
+      margin: 5px 0;
+      text-align: left;
+    }
+
+    ul li:nth-child(odd) {
+      background-color: white;
+    }
+
+    ul li:first-child,
+    ul li:last-child {
+      font-size: 22px;
+    }
+
+    ul li:nth-last-child(3) {
+      background-color: pink;
+    }
